# silo-searcher

./: .gitignore  Cargo.toml  README.md  config-default.toml  config-example.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tests.rs
crates/pools/: Cargo.toml
crates/pools/examples/: uniswapv2pool_amountout.rs  uniswapv3pool_amountout.rs
crates/pools/src/: lib.rs
crates/pools/src/uniswapv2pool/: abi.rs  mod.rs  tests.rs
crates/pools/src/uniswapv2pool/pricing/: abi.rs  local.rs  mod.rs  router02.rs  tests.rs
crates/pools/src/uniswapv3pool/: abi.rs  mod.rs  slot0.rs
crates/pools/src/uniswapv3pool/pricing/: abi.rs  local.rs  mod.rs  quoter.rs  quoter2.rs  tests.rs
crates/types/: Cargo.toml
crates/types/src/: pool.rs
