[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
   "crates/pools", "bin/arb", "crates/config", "crates/types",
]

[profile.release]
opt-level = 3
lto = true
debug = 1

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
simd-json = "0.14"
eyre = "0.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.5", features = ["full"] }
crossbeam-channel = "0.5"
toml = "0.8.19"
async-trait = "0.1"
lazy_static = "1.5.0"

